task: added summary route and dummy data
